--- a/index.html
+++ b/index.html
@@ -178,13 +178,12 @@
 
     <!-- Main Tree Container - No JS for drag/zoom -->
     <div class="p-4 rounded-xl shadow-2xl bg-white border border-gray-200 overflow-hidden">
-        <div class="tree w-max md:w-full mx-auto">
-            <!-- Ensure max width allows for horizontal scrolling if needed on desktop, but mobile forces vertical stacking -->
+        <div class="tree md:w-full mx-auto">
             <div class="w-full"> 
 
                 <!-- GENERATION 1: Thomas (1940-2018) & Evelyn (1945-) -->
                 <div class="branch">
-                    <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10 w-full md:w-auto">
+                    <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10 w-full md:w-auto pt-4 px-2">
                         <!-- Thomas (Deceased) -->
                         <div class="p-3 rounded-xl shadow-lg border border-red-400 bg-red-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                             <img src="https://placehold.co/50x50/FCA5A5/B91C1C?text=T.T." alt="Thomas Thompson Photo" class="rounded-full mb-2 border-2 border-red-400">
