--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <!-- BRANCH 1 (Child 1 Family - 5 Grandchildren) -->
                         <div class="branch max-w-sm mx-auto">
                              <!-- NEW: Family Portrait Container -->
-                            <div class="family-portrait relative mb-6 z-10 p-3 bg-white rounded-xl shadow-lg border-2 border-teal-400 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
+                            <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Riparip family</div>
                                 <img 
                                     src="https://placehold.co/224x100/A7F3D0/047857?text=C1+Family+Photo" 
@@ -288,7 +288,7 @@
                         <!-- BRANCH 2 (Child 2 Family - 4 Grandchildren) -->
                         <div class="branch max-w-sm mx-auto">
                             <!-- NEW: Family Portrait Container -->
-                            <div class="family-portrait relative mb-6 z-10 p-3 bg-white rounded-xl shadow-lg border-2 border-teal-400 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
+                            <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Trinidad Family Unit</div>
                                 <img 
                                     src="https://placehold.co/224x100/A7F3D0/047857?text=C2+Family+Photo" 
@@ -359,7 +359,7 @@
                         <!-- BRANCH 3 (Child 3 Family - 2 Grandchildren) -->
                         <div class="branch max-w-sm mx-auto">
                             <!-- NEW: Family Portrait Container -->
-                            <div class="family-portrait relative mb-6 z-10 p-3 bg-white rounded-xl shadow-lg border-2 border-teal-400 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
+                            <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Dela-Cruz Family Unit</div>
                                 <img 
                                     src="family picture\delacruz.jpg" 
@@ -417,7 +417,7 @@
                         <!-- BRANCH 4 (Child 4 Family - 3 Grandchildren) -->
                         <div class="branch max-w-sm mx-auto">
                             <!-- NEW: Family Portrait Container -->
-                            <div class="family-portrait relative mb-6 z-10 p-3 bg-white rounded-xl shadow-lg border-2 border-teal-400 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
+                            <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Saan Family Unit</div>
                                 <img 
                                     src="family picture\saan.jpg" 
@@ -481,7 +481,7 @@
                         <!-- BRANCH 5 (Child 5 Family - No Children) -->
                         <div class="branch max-w-sm mx-auto">
                             <!-- NEW: Family Portrait Container -->
-                            <div class="family-portrait relative mb-6 z-10 p-3 bg-white rounded-xl shadow-lg border-2 border-teal-400 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
+                            <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Child 5's Family Unit</div>
                                 <img 
                                     src="https://placehold.co/224x100/A7F3D0/047857?text=C5+Family+Photo" 
@@ -514,7 +514,7 @@
                         <!-- BRANCH 6 (Child 6 Family - No Children) -->
                         <div class="branch max-w-sm mx-auto">
                             <!-- NEW: Family Portrait Container -->
-                            <div class="family-portrait relative mb-6 z-10 p-3 bg-white rounded-xl shadow-lg border-2 border-teal-400 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
+                            <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02]">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">penidng</div>
                                 <img 
                                     src="https://placehold.co/224x100/A7F3D0/047857?text=C6+Family+Photo" 
