--- a/index.html
+++ b/index.html
@@ -344,24 +344,22 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                            <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10">
-                                <!-- Child 1 -->
-                                <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
-                                    <img src="family picture\eduardo.jpg" alt="Child 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
-                                    <p class="font-bold text-sm text-gray-800 truncate">Eduardo P. Riparip</p>
-                                    <p class="text-xs text-indigo-600 font-medium mt-1">(Eldest)</p>
-                                    <p class="text-xs text-gray-500 mt-1">pending - Present</p>
-                                </div>
-                                <!-- Marriage Line -->
-                                <div class="w-6 h-0.5 bg-gray-500"></div>
-                                <!-- Spouse 1 -->
-                                <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
-                                    <img src="family picture\Nemelta.jpg" alt="Spouse 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
-                                    <p class="font-bold text-sm text-gray-800 truncate">Nemelta P. Riparip</p>
-                                    <p class="text-xs text-indigo-600 font-medium mt-1">(Spouse)</p>
-                                    <p class="text-xs text-gray-500 mt-1">pending - Present</p>
-                                </div>
-                            </div>
+                           <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner">
+    <!-- Child 1 -->
+    <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
+        <img src="family picture\eduardo.jpg" alt="Child 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
+        <p class="font-bold text-sm text-gray-800 truncate">Eduardo P. Riparip</p>
+        <p class="text-xs text-indigo-600 font-medium mt-1">(Eldest)</p>
+        <p class="text-xs text-gray-500 mt-1">pending - Present</p>
+    </div>
+    <!-- Spouse 1 -->
+    <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
+        <img src="family picture\Nemelta.jpg" alt="Spouse 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
+        <p class="font-bold text-sm text-gray-800 truncate">Nemelta P. Riparip</p>
+        <p class="text-xs text-indigo-600 font-medium mt-1">(Spouse)</p>
+        <p class="text-xs text-gray-500 mt-1">pending - Present</p>
+    </div>
+</div>
 
                             <!-- NEW: Vertical line connecting G2 Parent down to G3 Siblings -->
                             <div class="line-v-connector"></div> 
