--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                           <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner">
+                           <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
     <!-- Child 1 -->
     <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
         <img src="family picture\eduardo.jpg" alt="Child 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -422,7 +422,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                            <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10">
+                          <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <!-- Child 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\itang.jpg" alt="Child 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -431,7 +431,7 @@
                                     <p class="text-xs text-gray-500 mt-1">pending - 2020</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                <div class="w-6 h-0.5 bg-gray-500"></div>
+                                
                                 <!-- Spouse 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\emil.jpg" alt="Spouse 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -493,7 +493,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                            <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10">
+                            <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <!-- Child 3 (Deceased) -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\arlene.jpg" alt="Child 3 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -503,7 +503,7 @@
                                     <p class="text-xs text-gray-500 mt-1">pending - Present</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                <div class="w-6 h-0.5 bg-gray-500"></div>
+                                <div class="w-2 h-2 bg-gray-500"></div>
                                 <!-- Spouse 3 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\ruel.jpg" alt="Spouse 3 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
