--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                                  <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg">
-                                            <img src="family picture\christianto.jpg" alt="Grandchild 2.3 Photo" class="rounded-full mb-1 border border-indigo-400">
+                                            <img src="family picture\Christianto.jpg" alt="Grandchild 2.3 Photo" class="rounded-full mb-1 border border-indigo-400">
                                             <p class="font-bold text-xs text-gray-800 truncate">Christian P. Trinidad</p>
                                         </div>
                                     </div>
@@ -473,7 +473,7 @@
                                  <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg">
-                                            <img src="family picture\ella.jpg" alt="Grandchild 2.4 Photo" class="rounded-full mb-1 border border-indigo-400">
+                                            <img src="family picture\Ella.jpg" alt="Grandchild 2.4 Photo" class="rounded-full mb-1 border border-indigo-400">
                                             <p class="font-bold text-xs text-gray-800 truncate">Sophia Angela Trinidad</p>
                                         </div>
                                     </div>
@@ -677,3 +677,4 @@
     </div>
 </body>
 </html>
+
