--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                 <!-- GENERATION 1: Thomas (1940-2018) & Evelyn (1945-) -->
                 <div class="branch">
-                    <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10 w-full md:w-auto pt-4 px-2">
+                        <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                         <!-- Thomas (Deceased) -->
                         <div class="p-3 rounded-xl shadow-lg border border-red-400 bg-red-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                             <img src="https://placehold.co/50x50/FCA5A5/B91C1C?text=T.T." alt="Thomas Thompson Photo" class="rounded-full mb-2 border-2 border-red-400">
@@ -319,7 +319,7 @@
                             <p class="text-xs text-gray-500 mt-1">1942 - 2012</p>
                         </div>
                         <!-- Marriage Line -->
-                  <div class="**w-2** md:w-4 h-0.5 bg-gray-500"></div>
+                            <div class="w-2 h-2 bg-gray-500"></div>v>
                         <!-- Evelyn (Alive) -->
                         <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                             <img src="https://placehold.co/50x50/C7D2FE/4F46E5?text=E.T." alt="Evelyn Thompson Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -344,7 +344,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                           <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
+                               <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
     <!-- Child 1 -->
     <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
         <img src="family picture\eduardo.jpg" alt="Child 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -352,6 +352,7 @@
         <p class="text-xs text-indigo-600 font-medium mt-1">(Eldest)</p>
         <p class="text-xs text-gray-500 mt-1">pending - Present</p>
     </div>
+                                          <div class="w-2 h-2 bg-gray-500"></div>
     <!-- Spouse 1 -->
     <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
         <img src="family picture\Nemelta.jpg" alt="Spouse 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -422,7 +423,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                          <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
+                               <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <!-- Child 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\itang.jpg" alt="Child 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -431,7 +432,7 @@
                                     <p class="text-xs text-gray-500 mt-1">pending - 2020</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                
+                                           <div class="w-2 h-2 bg-gray-500"></div>
                                 <!-- Spouse 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\emil.jpg" alt="Spouse 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -445,7 +446,7 @@
                             <div class="line-v-connector"></div> 
 
                             <!-- Grandchildren (4 children) - GENERATION 3 -->
-                            <div class="children-container grandchild-container md:flex-row !gap-x-4 md:!gap-x-8 grid grid-cols-2 md:grid-cols-4 w-full">
+                                 <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg">
@@ -493,7 +494,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                            <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-emerald-500 bg-emerald-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
+                            <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <!-- Child 3 (Deceased) -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\arlene.jpg" alt="Child 3 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -508,7 +509,7 @@
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\ruel.jpg" alt="Spouse 3 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
                                     <p class="font-bold text-sm text-gray-800 truncate">Ruel Torres </p>
-                                    <p class="font-bold text-sm text-gray-800 truncate">DelaCruz </p>
+                                    <p class="font-bold text-sm text-gray-800 truncate">Dela=Cruz </p>
                                     <p class="text-xs text-indigo-600 font-medium mt-1">(Spouse)</p>
                                     <p class="text-xs text-gray-500 mt-1">pending - Present</p>
                                 </div>
@@ -523,7 +524,7 @@
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg">
                                             <img src="family picture\avanna.jpg" alt="Grandchild 3.1 Photo" class="rounded-full mb-1 border border-indigo-400">
-                                            <p class="font-bold text-xs text-gray-800 truncate">Andrea Dela Cruz </p>
+                                            <p class="font-bold text-xs text-gray-800 truncate">Andrea Dela-Cruz </p>
                                         </div>
                                     </div>
                                 </div>
@@ -532,7 +533,7 @@
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg">
                                             <img src="family picture\andrea.jpg" alt="Grandchild 3.2 Photo" class="rounded-full mb-1 border border-indigo-400">
                                             <p class="font-bold text-xs text-gray-800 truncate">Avanna Roe </p>
-                                            <p class="font-bold text-xs text-gray-800 truncate">Dela Cruz </p>
+                                            <p class="font-bold text-xs text-gray-800 truncate">Dela=Cruz </p>
                                         </div>
                                     </div>
                                 </div>
@@ -551,7 +552,7 @@
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
                                 >
                             </div>
-                            <div class="couple relative flex items-center justify-center space-x-4 mb-4 z-10">
+                              <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <!-- Child 4 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\jocelyn.jpg" alt="Child 4 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -677,4 +678,5 @@
     </div>
 </body>
 </html>
+
 
