--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
                             <div class="line-v-connector"></div> 
 
                             <!-- Grandchildren (5 children) - GENERATION 3 -->
+                                  <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-skyblue-500 bg-skyblue-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                             <div class="children-container grandchild-container md:flex-row !gap-x-4 md:!gap-x-8 grid grid-cols-3 md:grid-cols-5 w-full">
                                 <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
@@ -446,7 +447,7 @@
                             <div class="line-v-connector"></div> 
 
                             <!-- Grandchildren (4 children) - GENERATION 3 -->
-                                 <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-red-500 bg-red-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
+                                 <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-skyblue-500 bg-skyblue-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                                 <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg">
@@ -519,6 +520,7 @@
                             <div class="line-v-connector"></div> 
 
                             <!-- Grandchildren (2 children) - GENERATION 3 -->
+                                  <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-skyblue-500 bg-skyblue-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                             <div class="children-container grandchild-container md:flex-row !gap-x-4 md:!gap-x-8 grid grid-cols-2 md:grid-cols-2 w-full">
                                 <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
@@ -562,7 +564,7 @@
                                     <p class="text-xs text-gray-500 mt-1">1981 - Present</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                <div class="w-6 h-0.5 bg-gray-500"></div>
+                                  <div class="w-2 h-2 bg-gray-500"></div>v>
                                 <!-- Spouse 4 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\samuel.jpg" alt="Spouse 4 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -576,6 +578,7 @@
                             <div class="line-v-connector"></div> 
 
                             <!-- Grandchildren (3 children) - GENERATION 3 -->
+                                  <div class="couple relative flex items-center justify-center space-x-0 mb-4 z-10 border-4 border-skyblue-500 bg-skyblue-50/50 rounded-2xl p-2 shadow-inner padding: 5px;">
                             <div class="children-container grandchild-container md:flex-row !gap-x-4 md:!gap-x-8 grid grid-cols-3 md:grid-cols-3 w-full">
                                 <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
@@ -678,5 +681,6 @@
     </div>
 </body>
 </html>
+
 
 
