--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <p class="text-xs text-gray-500 mt-1">1942 - 2012</p>
                         </div>
                         <!-- Marriage Line -->
-                            <div class="w-2 h-2 bg-gray-500"></div>v>
+                            <div class="w-2 h-2 bg-gray-500"></div>
                         <!-- Evelyn (Alive) -->
                         <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                             <img src="https://placehold.co/50x50/C7D2FE/4F46E5?text=E.T." alt="Evelyn Thompson Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -447,7 +447,7 @@
                             <div class="line-v-connector"></div> 
 
                             <!-- Grandchildren (4 children) - GENERATION 3 -->
-                                
+                                 <div class="children-container grandchild-container md:flex-row !gap-x-4 md:!gap-x-8 grid grid-cols-3 md:grid-cols-5 w-full">
                                 <div class="branch md:w-auto !pt-0">
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-125 hover:shadow-lg">
@@ -681,6 +681,7 @@
     </div>
 </body>
 </html>
+
 
 
 
