--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <p class="text-xs text-gray-500 mt-1">1942 - 2012</p>
                         </div>
                         <!-- Marriage Line -->
-                            <div class="w-2 h-2 bg-gray-500"></div>
+                            <div class="w-o.5 h-1 bg-gray-500"></div>
                         <!-- Evelyn (Alive) -->
                         <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                             <img src="https://placehold.co/50x50/C7D2FE/4F46E5?text=E.T." alt="Evelyn Thompson Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -352,7 +352,7 @@
         <p class="text-xs text-indigo-600 font-medium mt-1">(Eldest)</p>
         <p class="text-xs text-gray-500 mt-1">pending - Present</p>
     </div>
-                                          <div class="w-2 h-2 bg-gray-500"></div>
+                                          <div class="w-o.5 h-1bg-gray-500"></div>
     <!-- Spouse 1 -->
     <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
         <img src="family picture\Nemelta.jpg" alt="Spouse 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -433,7 +433,7 @@
                                     <p class="text-xs text-gray-500 mt-1">June 24 1971 - 2020</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                           <div class="w-2 h-2 bg-gray-500"></div>
+                                           <div class="w-o.5 h-1 bg-gray-500"></div>
                                 <!-- Spouse 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\emil.jpg" alt="Spouse 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -489,7 +489,7 @@
                             <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02] delacruz">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Dela-Cruz Family Unit</div>
                                 <img 
-                                    src="family picture\delacruz.jpg" 
+                                    src="family picture\Delacruz.jpg" 
                                     alt="Child 3's Family Group Photo" 
                                     class="w-full h-auto rounded-lg object-cover border border-teal-200"
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
@@ -505,7 +505,7 @@
                                     <p class="text-xs text-gray-500 mt-1">pending - Present</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                <div class="w-2 h-2 bg-gray-500"></div>
+                                <div class="w-o.5 h-1 bg-gray-500"></div>
                                 <!-- Spouse 3 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\ruel.jpg" alt="Spouse 3 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -564,7 +564,7 @@
                                     <p class="text-xs text-gray-500 mt-1">January 1 1981 - Present</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                  <div class="w-2 h-2 bg-gray-500"></div>
+                                  <div class="w-o.5 h-1 bg-gray-500"></div>
                                 <!-- Spouse 4 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\samuel.jpg" alt="Spouse 4 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -628,7 +628,7 @@
                                     <p class="text-xs text-gray-500 mt-1">pending - Present</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                <div class="w-6 h-0.5 bg-gray-500"></div>
+                                <div class="w-o.5 h-1 bg-gray-500"></div>
                                 <!-- Spouse 5 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="https://placehold.co/50x50/C7D2FE/4F46E5?text=S5" alt="Spouse 5 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -658,15 +658,6 @@
                                     <img src="https://placehold.co/50x50/C7D2FE/4F46E5?text=C6" alt="Child 6 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
                                     <p class="font-bold text-sm text-gray-800 truncate">pending</p>
                                     <p class="text-xs text-indigo-600 font-medium mt-1">(Youngest)</p>
-                                    <p class="text-xs text-gray-500 mt-1">pending</p>
-                                </div>
-                                <!-- Marriage Line -->
-                                <div class="w-6 h-0.5 bg-gray-500"></div>
-                                <!-- Spouse 6 -->
-                                <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
-                                    <img src="https://placehold.co/50x50/C7D2FE/4F46E5?text=S6" alt="Spouse 6 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
-                                    <p class="font-bold text-sm text-gray-800 truncate">pending</p>
-                                    <p class="text-xs text-indigo-600 font-medium mt-1">(Spouse)</p>
                                     <p class="text-xs text-gray-500 mt-1">pending</p>
                                 </div>
                             </div>
