--- a/index.html
+++ b/index.html
@@ -348,15 +348,17 @@
     <!-- Child 1 -->
     <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
         <img src="family picture\eduardo.jpg" alt="Child 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
-        <p class="font-bold text-sm text-gray-800 truncate">Eduardo P. Riparip</p>
+        <p class="font-bold text-sm text-gray-800 truncate">Eduardo P. </p>
+           <p class="font-bold text-sm text-gray-800 truncate">Riparip</p>
         <p class="text-xs text-indigo-600 font-medium mt-1">(Eldest)</p>
         <p class="text-xs text-gray-500 mt-1">pending - Present</p>
     </div>
-                                          <div class="w-o.5 h-1bg-gray-500"></div>
+                    
     <!-- Spouse 1 -->
     <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
         <img src="family picture\Nemelta.jpg" alt="Spouse 1 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
-        <p class="font-bold text-sm text-gray-800 truncate">Nemelta P. Riparip</p>
+        <p class="font-bold text-sm text-gray-800 truncate">Nemelta P. </p>
+                <p class="font-bold text-sm text-gray-800 truncate">Riparip</p>
         <p class="text-xs text-indigo-600 font-medium mt-1">(Spouse)</p>
         <p class="text-xs text-gray-500 mt-1">pending - Present</p>
     </div>
@@ -428,12 +430,13 @@
                                 <!-- Child 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\itang.jpg" alt="Child 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
-                                    <p class="font-bold text-sm text-gray-800 truncate">Juanita Trinidad</p>
+                                    <p class="font-bold text-sm text-gray-800 truncate">Juanita Riparip</p>
+                                      <p class="font-bold text-sm text-gray-800 truncate">Trinidad</p>
                                     <p class="text-xs text-indigo-600 font-medium mt-1">(2nd Child)</p>
                                     <p class="text-xs text-gray-500 mt-1">June 24 1971 - 2020</p>
                                 </div>
                                 <!-- Marriage Line -->
-                                           <div class="w-o.5 h-1 bg-gray-500"></div>
+                                        
                                 <!-- Spouse 2 -->
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\emil.jpg" alt="Spouse 2 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
@@ -672,6 +675,7 @@
     </div>
 </body>
 </html>
+
 
 
 
