--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                             <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02] saan">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Saan Family Unit</div>
                                 <img 
-                                    src="family picture\saan.jpg" 
+                                    src="family picture\Saan.jpg" 
                                     alt="Child 4's Family Group Photo" 
                                     class="w-full h-auto rounded-lg object-cover border border-teal-200"
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
@@ -677,6 +677,7 @@
     </div>
 </body>
 </html>
+
 
 
 
