--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                 <div class="p-3 rounded-xl shadow-lg border border-indigo-400 bg-indigo-50 text-center w-[140px] md:w-[160px] flex-shrink-0 flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-[1.15] hover:shadow-xl">
                                     <img src="family picture\ruel.jpg" alt="Spouse 3 Photo" class="rounded-full mb-2 border-2 border-indigo-400">
                                     <p class="font-bold text-sm text-gray-800 truncate">Ruel Torres </p>
-                                    <p class="font-bold text-sm text-gray-800 truncate">Dela=Cruz </p>
+                                    <p class="font-bold text-sm text-gray-800 truncate">Dela-Cruz </p>
                                     <p class="text-xs text-indigo-600 font-medium mt-1">(Spouse)</p>
                                     <p class="text-xs text-gray-500 mt-1">pending - Present</p>
                                 </div>
@@ -677,6 +677,7 @@
     </div>
 </body>
 </html>
+
 
 
 
