--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </header>
 
     <!-- Family Picture Section -->
-  <div class="mb-12 max-w-6xl mx-auto">
+  <div class="mb-12 w-11/12 mx-auto sm:max-w-6xl">
     <div class="bg-white p-6 rounded-2xl shadow-xl border border-gray-100">
         <h2 class="text-2xl font-semibold text-center text-gray-700 mb-4">Family Portrait</h2>
         <div class="aspect-video relative overflow-hidden rounded-xl border-4 border-indigo-200">
@@ -298,7 +298,6 @@
                 onerror="this.onerror=null;this.src='https://placehold.co/800x450/4B5563/FFFFFF?text=Photo+Unavailable';">
         </div>
     </div>
-    <p class="text-center text-sm text-pink-500 mt-2">All loving family members.</p>
 </div>
             <p class="text-center text-gray-500 mt-3 text-sm">All loving family members.</p>
         </div>
@@ -677,6 +676,7 @@
     </div>
 </body>
 </html>
+
 
 
 
