--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <div class="family-portrait relative mb-6 z-10 p-3 rounded-xl shadow-lg border-2 w-full max-w-[300px] md:w-56 mx-auto text-center cursor-pointer hover:shadow-xl transition-all duration-300 hover:scale-[1.02] riparip">
                                 <div class="text-xs font-semibold text-teal-700 mb-2">Riparip family</div>
                                 <img 
-                                    src="https://placehold.co/224x100/A7F3D0/047857?text=C1+Family+Photo" 
+                                    src="picture\Riparip.jpg" 
                                     alt="Child 1's Family Group Photo" 
                                     class="w-full h-auto rounded-lg object-cover border border-teal-200"
                                     onerror="this.onerror=null;this.src='https://placehold.co/224x100/4B5563/FFFFFF?text=Photo+Missing';"
@@ -676,6 +676,7 @@
     </div>
 </body>
 </html>
+
 
 
 
